# m365-custom-agent

./: CONTRIBUTING.md  README.md
.github/workflows/: _terraformDestroyTemplate.yml  _terraformEnvironmentTemplate.yml  _webappDeployTemplate.yml  _webappTestTemplate.yml  lint.yml  terraform.yml  webapp.yml
code/backend/: requirements.txt
code/copilot/: .env.TEMPLATE  Dockerfile  README.md  pyproject.toml
code/copilot/app/: auth.py  logs.py  main.py
code/copilot/app/agents/: actions.py  document.py  root.py  summarizer.py
code/copilot/app/api/v1/: router.py
code/copilot/app/api/v1/endpoints/: heartbeat.py  messages.py
code/copilot/app/copilot/: action.py  activities_msteams.py  common.py  configuration.py  copilot.py  handler_abstract.py  handler_msteams.py  msteams.py  scenarios.py
code/copilot/app/core/: settings.py
code/copilot/app/files/: extraction.py
code/copilot/app/models/: agents.py  attachments.py  copilot.py  core.py
code/infra/: aoai.tf  applicationinsights.tf  appserviceplan.tf  botservice.tf  cosmosdb.tf  data.tf  documentintelligence.tf  keyvault.tf  locals.tf  main.tf  roleassignments_uai.tf  storage.tf  terraform.tf  variables.tf  webapplinux.tf  webapplinux_code.tf
code/teams/: manifest.json
config/PerfectThymeTech/: vars.tfvars
docs/: DeploymentBaseline.md  DeploymentPrerequisites.md  DeploymentReferenceImplementation.md  DeploymentTeamsAppSetup.md  EntraIDAppRegistrationSetup.md  FAQ.md  INSTRUCTIONS_DOCUMENT_AGENT.txt  INSTRUCTIONS_SUGGESTED_ACTIONS_AGENT.txt  README.md  encode_tenant_id.py
docs/prereqs/: aadapplication.tf  file.tf  locals.tf  main.tf  outputs.tf  terraform.tf  userassignedidentity.tf  variables.tf  vars.tfvars
